Version 1.3.10+svn:
 * campaigns
   * Scepter of Fire
     * in 'The Dragon', the player now gets a starting castle where to recruit
       and recall normally
 * campaign server
   * fixed a bug which broke uploads with a .cfg file next to the campaign
     directory
   * enhanced wescamp integration (still not finished)
 * graphics:
   * added user-contributed graphic updates for 'storm trident', 'ankh' and
     'staff' pick-up items
 * language and i18n:
   * updated translations: Chinese, Czech, Dutch, French, Galician, Polish,
     Portuguese (Brazil), Swedish
 * multiplayer:
   * fixed segmentation fault on loading saved games from the multiplayer user
     interface
   * fixed random leaders not getting random genders as expected by design
 * WML engine:
   * implemented the #ifndef directive, the opposite of #ifdef, in the
     preprocessor, to parse the following block only when the symbol is not
     defined
   * fix the recall list duplication bug (bug #10183)
   * [modify_side] can now override the recruit list, just like [set_recruit];
     should be the preferred method at some point.
 * units:
   * balancing changes:
     * increased the melee attack of the Saurian Oracle from 5-2 to 4-3
 * WML terrains:
   * added 'Mushroom Grove lit' (on cave) using string 'Uu^Ufi'
 * miscellaneous and bug fixes:
   * added some extra headers for gcc 4.3 (based on patch #842)

Version 1.3.10:
 * campaign server
   * it's now possible to delete a campaign with the master password
   * added initial support for the wescamp translation integration
     (not finished yet)
   * You can now supply a .pbl file within the directory for a campaign
     as _server.pbl, rather than externally at the same level as the directory.
     Both the client code in the game and the Python client in utils/ have been
     enhanced to allow this.
 * campaigns:
   * Eastern Invasion
     * Fixed bug #10195, related to Holy Amulet's description