@@ -7,6 +7,9 @@ Version 1.3.10+svn:
    * fixed a bug which broke uploads with a .cfg file next to the campaign
      directory
    * enhanced wescamp integration (still not finished)
+ * editor:
+   * fixed a bug which prevented the editor to load maps with a Windows EOL on
+     Windows, other platforms where not affected.
  * graphics:
    * added user-contributed graphic updates for 'storm trident', 'ankh' and
      'staff' pick-up items
